--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,5 +91,6 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
