feat: solved more problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,5 +92,5 @@
         "valarray": "cpp",
         "variant": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/g++"
+    "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
